--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,6 @@
 .wrapper {
   width: 70%;
   margin: auto;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
 }
 header {
   display: flex;
@@ -84,7 +81,6 @@ section.banner button {
 }
 .separator-block {
   width: 3rem;
-
   height: 0.2rem;
   margin: auto;
   margin-top: 5px;
@@ -97,6 +93,7 @@ section.banner button {
   flex: 1;
   min-width: 0;
   object-fit: cover;
+  max-width: 50%;
 }
 .background-coral {
   background-color: coral;
